# cmake-sandbox

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
apps/: CMakeLists.txt  greetings.c
docs/: CMakeLists.txt  mainpage.md
include/cmake_tests/: hello.h
main/: CMakeLists.txt
main/src/: main.c
say-hello/: CMakeLists.txt
say-hello/src/: hello.c
src/: CMakeLists.txt  hello.c
tests/: CMakeLists.txt
